# SLAM-Loop-Closing

./: .gitignore  CMakeLists.txt  README.md
include/: extract_images.hpp  loop_closing.hpp
src/: calibrate.cpp  extract_images_from_mov.cpp  loop_closing.cpp  main.cpp  main2.cpp
